import org.apache.tools.ant.filters.ReplaceTokens

plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

def plugin = 'EasyClans'
group = 'net.astrona'
version = '1.0'

repositories {
    mavenCentral()
    maven {
        name = 'papermc-repo'
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
}

dependencies {
    compileOnly group: 'io.papermc.paper', name: 'paper-api', version: '1.20.1-R0.1-SNAPSHOT'
    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    from (sourceSets.main.resources.srcDirs) {
        include '**/*.yml'
        filter ReplaceTokens, tokens: ["version": version]
    }
}

shadowJar {
    /*archiveBaseName.set(plugin)
    archiveClassifier.set('')
    archiveVersion.set(version)*/
}